<resources>
    <string name="app_name">hikelowna</string>
    <string name="loginText">Login</string>
    <string name="registerText"><u>Register</u></string>
    <string name="passwordText">Password</string>
    <string name="usernameText">Username</string>
    <string name="rememberText">Remember me</string>
    <string name="welcomeText">Welcome back! Welcome back! Welcome back! Welcome back! Welcome back!</string>
    <string name="title_activity_landing_page">LandingPage</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_maps_api_key">AIzaSyB5pETZIWcmksqfY20ZfTP27BKOL7bWFjk</string>
    <string name="mapMessage">Initializing Map...</string>
    <string name="button_size_map">20dp</string>
    <string name="hikeTitle">Hike Title</string>
    <string name="hikeDetails">Hike Details</string>
    <string name="popupTitle">Popup Title</string>
    <string name="popupDescription">Popup Description</string>
    <string name="hikeTimer">00:00:00</string>
    <string name="pauseHike">⏸️ Hike</string>
    <string name="resumeHike">▶️ Hike</string>
    <string name="finishHike">🏁 Hike</string>
    <string name="pause">⏸️</string>
    <string name="redCircle">🔴</string>
    <string name="greenCircle">🟢</string>
    <string name="blackCircle">⚫</string>
    <string name="hikeLengthTitle">Length</string>
    <string name="hikeEstimatedTimeTitle">Estimated Time</string>
    <string name="hikeLengthText">00.00 km</string>
    <string name="hikeEstimatedTimeText">0.00 hr</string>
    <string name="timeElapsedTitle">Time Elapsed</string>
    <string name="textHint">Click on the marker for more details</string>
    <string name="feedTest">FeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeedFeed</string>

    <string-array name="difficulty">
        <item>Easy</item>
        <item>Moderate</item>
        <item>Hard</item>
        <item>Extreme</item>
        <item>Impossible</item>
    </string-array>

    <string-array name="filterOption">
        <item>Name</item>
        <item>Rating</item>
        <item>Difficulty</item>
        <item>Length</item>
        <item>Estimated Time</item>
    </string-array>

    <string name="shareHike"><u>Share Hike 📄</u></string>
</resources>

