<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gainsboro"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/forest"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hikelownaLogo"
        app:srcCompat="@drawable/gradient_top_fade" />

    <ImageView
        android:id="@+id/birdsInSky"
        android:layout_width="match_parent"
        android:layout_height="143dp"
        android:layout_marginTop="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gradient_bottom_fade" />

    <ImageView
        android:id="@+id/hikelownaLogo"
        android:layout_width="397dp"
        android:layout_height="137dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hikelowna" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/nexaheavy"
        android:text="@string/welcomeText"
        android:textColor="@color/maincolor"
        android:textAlignment="center"
        android:paddingHorizontal="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hikelownaLogo" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/inputfields"
        android:ems="10"
        android:fontFamily="@font/nexalight"
        android:gravity="center"
        android:hint="@string/usernameText"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/inputfields"
        android:ems="10"
        android:fontFamily="@font/nexalight"
        android:gravity="center"
        android:hint="@string/passwordText"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/usernameInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/usernameInput"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput" />


    <CheckBox
        android:id="@+id/rememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nexalight"
        android:text="@string/rememberText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/passwordInput"
        app:layout_constraintStart_toStartOf="@+id/passwordInput"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nexaheavy"
        android:text="@string/loginText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/passwordInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordInput"
        app:layout_constraintTop_toBottomOf="@+id/rememberMe" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/nexaheavy"
        android:text="@string/registerText"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />





</androidx.constraintlayout.widget.ConstraintLayout>